--- a/BiodataCard/style.css
+++ b/BiodataCard/style.css
@@ -4,45 +4,49 @@
     box-sizing: border-box;
 }
 
-.flex{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
-    margin: 40px 70px;
-}
-.flex1{
-
-     height: 400px;
-     width: 350px;
-     background-color: pink;
-     color: black;
-     border-radius: 10px;
-    
-  
-}
-
-.fav-icon{
-
+.flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px;
+    border: 1px solid black;
+    flex-wrap: wrap;
+    /* margin: 40px 70px; */
 }
 
-.fav{
+.flex1 {
+
+    height: 600px;
+    width: 350px;
+    background-color: pink;
+    color: black;
+    border-radius: 10px;
+    margin-right: 10px;
+
+
+}
+
+.fav-icon {
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.fav {
     height: 70px;
-    width: 90px;
+    width: 110px;
 }
 
-.radius{
-      background-color: rgba(128, 0, 128, 0.651);
-      border-radius: 50%;
-}
+/* .radius {
+    background-color: rgba(128, 0, 128, 0.651);
+    border-radius: 50%;
+} */
 
-.content{
+.content {
     max-width: 35px;
-    max-height:35px;
+    max-height: 35px;
     background-color: white;
     border-radius: 50%;
     padding: 10px;
@@ -53,19 +57,77 @@
     text-align: center;
     margin: 15px;
 }
+
 .center {
     margin: 0 auto;
     padding-left: 20px;
 }
-.bottom p{
+
+.bottom p {
     margin-top: 15px;
 }
 
-input{
-    margin-right: 60px;
-    display: inline-block;
-    width: 30%;
-   
+.input-text {
+
+    margin-right: 20px;
+    width: 50%;
+    float: right;
+    padding: 2px;
+    border-radius: 10px;
 }
 
+.label-input {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+}
 
+.class2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.button {
+    padding: 5px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    border-radius: 10px;
+    background-color: rgb(79, 5, 5);
+    color: white;
+
+}
+
+.looking {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 10px;
+    text-align: center;
+}
+
+.br-center {
+    text-align: center;
+}
+
+.large-height1 {
+    height: 90px;
+    width: 90%;
+}
+
+.inline {
+    margin-top: 10px;
+}
+
+.right {
+    margin-right: 10px;
+}
+
+.days {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    text-align: center;
+    font-size: 13px;
+}
